implemented eventManager to save every action

--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
     "date-fns": "^2.25.0",
+    "express": "^4.17.1",
+    "filepond": "^4.30.3",
+    "filepond-plugin-file-encode": "^2.1.10",
+    "mime-types": "^2.1.34",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.2",
+    "react-file-previewer": "^0.6.3",
+    "react-file-viewer": "^1.2.1",
+    "react-filepond": "^7.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "devStart": "nodemon src/Draft/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
